@@ -42,6 +42,28 @@ We do not provide any support for Opera, which doesn't mean Opera cannot access 
 
 For installation options and troubleshooting tips, see [NOJ Documentation](https://njuptaaa.github.io/docs/).
 
+### Supported Languages
+
+NOJ now supports 15 popular languages, you can start issues about new languages support. 
+
+|Language|Compile/Run Command|
+|--------|-------------------|
+|C|/usr/bin/gcc -DONLINE_JUDGE -O2 -w -fmax-errors=3 -std=c99 {src_path} -lm -o {exe_path}|
+|C++|/usr/bin/g++ -DONLINE_JUDGE -O2 -w -fmax-errors=3 -std=c++11 {src_path} -lm -o {exe_path}|
+|Java|/usr/bin/javac {src_path} -d {exe_dir} -encoding UTF8<br>/usr/bin/java -cp {exe_dir} -XX:MaxRAM={max_memory}k -Djava.security.manager -Dfile.encoding=UTF-8 -Djava.security.policy==/etc/java_policy -Djava.awt.headless=true Main|
+|Python2|/usr/bin/python -m py_compile {src_path}<br>/usr/bin/python {exe_path}|
+|Python3|/usr/bin/python3.7 -m py_compile {src_path}<br>/usr/bin/python3.7 {exe_path}|
+|PHP7|/usr/bin/php {exe_path}|
+|Javascript|/usr/bin/jsc {exe_path}|
+|Go|/usr/bin/go build -o {exe_path} {src_path}|
+|C#|/usr/bin/mcs -optimize+ -out:{exe_path} {src_path}|
+|Ruby|/usr/bin/ruby {exe_path}|
+|Rust|/usr/bin/rustc -O -o {exe_path} {src_path}|
+|Haskell|/usr/bin/ghc -O -outputdir /tmp -o {exe_path} {src_path}|
+|Free Pascal|/usr/bin/fpc -O2 -o{exe_path} {src_path}|
+|Plaintext|/bin/cat {exe_path}|
+|Free Basic|/usr/local/bin/fbc {src_path}|
+
 ### Supported Feature
 
 - [X] Basic Home Page
